--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,55 +6,34 @@ on:
   workflow_dispatch:
 
 jobs:
-  build-linux:
-    name: Build on Linux (JVM, Android, etc.)
-    runs-on: ubuntu-latest
+  build-upload:
+    name: Build upload
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macOS-latest, windows-latest]
     steps:
-      - name: Checkout Repository
+      - name: Checkout
         uses: actions/checkout@v3
-
-      - name: Set Up JDK
+      
+      - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
-          java-version: '11'
-          cache: 'gradle'
-
-      - name: Setup Gradle
-        uses: gradle/gradle-build-action@v3
-
-      - name: Build Linux Targets
-        run: ./gradlew build
+          java-version: '17'
+  
+      - name: Publish
+        run: ./gradlew publishAllPublicationsToOss
         env:
-          OSSRH_USERNAME: ${{ secrets.OSSRH_USERNAME }}
-          OSSRH_PASSWORD: ${{ secrets.OSSRH_PASSWORD }}
-
-  build-macos:
-    name: Build on macOS (iOS Targets)
-    runs-on: macos-latest
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v3
-
-      - name: Set Up JDK
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'temurin'
-          java-version: '11'
-          cache: 'gradle'
-
-      - name: Setup Gradle
-        uses: gradle/gradle-build-action@v3
-
-      - name: Build iOS Targets
-        run: ./gradlew assembleXCFramework
-        env:
-          OSSRH_USERNAME: ${{ secrets.OSSRH_USERNAME }}
-          OSSRH_PASSWORD: ${{ secrets.OSSRH_PASSWORD }}
+          SONATYPE_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
+          SONATYPE_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
+          GPG_KEY_SECRET: ${{ secrets.GPG_KEY_SECRET }}
+          GPG_KEY_PASSWORD: ${{ secrets.GPG_KEY_PASSWORD }}
+          SDK_VERSION: ${{ secrets.SDK_VERSION }}
 
   publish:
     name: Publish to Maven Central
-    needs: [build-linux, build-macos]
+    needs: [build-upload]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
@@ -74,4 +53,5 @@ jobs:
           OSSRH_PASSWORD: ${{ secrets.OSSRH_PASSWORD }}
           GPG_KEY_SECRET: ${{ secrets.GPG_KEY_SECRET }}
           GPG_KEY_PASSWORD: ${{ secrets.GPG_KEY_PASSWORD }}
+          SDK_VERSION: ${{ secrets.SDK_VERSION }}
 
