--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,21 +15,31 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      
+
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
           java-version: '17'
+          cache: 'gradle'
   
+      - name: Verify Java Version
+        run: java -version  # 🔥 Check that Java 17 is actually being used
+
+      - name: Clear Gradle Cache (if needed)
+        run: |
+          rm -rf ~/.gradle/caches
+          rm -rf ~/.gradle/wrapper
+
       - name: Publish
-        run: ./gradlew publishAllPublicationsToOss
+        run: ./gradlew publishAllPublicationsToOss --no-daemon --stacktrace
         env:
           SONATYPE_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
           SONATYPE_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
           GPG_KEY_SECRET: ${{ secrets.GPG_KEY_SECRET }}
           GPG_KEY_PASSWORD: ${{ secrets.GPG_KEY_PASSWORD }}
           SDK_VERSION: ${{ secrets.SDK_VERSION }}
+
 
   publish:
     name: Publish to Maven Central
