--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,18 +22,22 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
           cache: 'gradle'
-  
-      - name: Verify Java Version
-        run: java -version  # 🔥 Check that Java 17 is actually being used
 
-      - name: Clear Gradle Cache (if needed)
+      - name: Set JAVA_HOME (force Java 17)
         run: |
-          rm -rf ~/.gradle/caches
-          rm -rf ~/.gradle/wrapper
+          echo "JAVA_HOME=$(dirname $(dirname $(readlink -f $(which java))))" >> $GITHUB_ENV
+          export JAVA_HOME=$(dirname $(dirname $(readlink -f $(which java))))
+          echo "Using JAVA_HOME: $JAVA_HOME"
+
+      - name: Verify Java Version
+        run: |
+          java -version
+          echo "JAVA_HOME: $JAVA_HOME"
 
       - name: Publish
         run: ./gradlew publishAllPublicationsToOss --no-daemon --stacktrace
         env:
+          JAVA_HOME: ${{ env.JAVA_HOME }}
           SONATYPE_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
           SONATYPE_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
           GPG_KEY_SECRET: ${{ secrets.GPG_KEY_SECRET }}
@@ -49,16 +53,29 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v3
 
-      - name: Set Up JDK
+
+      - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
-          java-version: '11'
+          java-version: '17'
           cache: 'gradle'
+
+      - name: Set JAVA_HOME (force Java 17)
+        run: |
+          echo "JAVA_HOME=$(dirname $(dirname $(readlink -f $(which java))))" >> $GITHUB_ENV
+          export JAVA_HOME=$(dirname $(dirname $(readlink -f $(which java))))
+          echo "Using JAVA_HOME: $JAVA_HOME"
+
+      - name: Verify Java Version
+        run: |
+          java -version
+          echo "JAVA_HOME: $JAVA_HOME"
 
       - name: Publish Artifacts
         run: ./gradlew publish closeAndReleaseRepository
         env:
+          JAVA_HOME: ${{ env.JAVA_HOME }}
           OSSRH_USERNAME: ${{ secrets.OSSRH_USERNAME }}
           OSSRH_PASSWORD: ${{ secrets.OSSRH_PASSWORD }}
           GPG_KEY_SECRET: ${{ secrets.GPG_KEY_SECRET }}
