--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,52 +2,21 @@ name: Build and Publish to Maven Central
 
 on:
   release:
-    types: [published]
-  workflow_dispatch:
-
+    types: [released, prereleased]
 jobs:
-  build-upload:
-    name: Build upload
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, macOS-latest, windows-latest]
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'temurin'
-          java-version: '17'
-  
-      - name: Publish
-        run: ./gradlew publishAllPublicationsToOss
-        env:
-          SONATYPE_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
-          SONATYPE_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
-          GPG_KEY_SECRET: ${{ secrets.GPG_KEY_SECRET }}
-          GPG_KEY_PASSWORD: ${{ secrets.GPG_KEY_PASSWORD }}
-          SDK_VERSION: ${{ secrets.SDK_VERSION }}
-
   publish:
-    name: Publish to Maven Central
-    needs: [build-upload]
-    runs-on: ubuntu-latest
+    name: Release build and publish
+    runs-on: macOS-latest
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v3
-
-      - name: Set Up JDK
-        uses: actions/setup-java@v3
+      - name: Check out code
+        uses: actions/checkout@v4
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
         with:
-          distribution: 'temurin'
-          java-version: '17'
-          cache: 'gradle'
-
-      - name: Publish Artifacts
-        run: ./gradlew publish closeAndReleaseRepository
+          distribution: 'zulu'
+          java-version: 21
+      - name: Publish to MavenCentral
+        run: ./gradlew publishToMavenCentral --no-configuration-cache
         env:
           OSSRH_USERNAME: ${{ secrets.OSSRH_USERNAME }}
           OSSRH_PASSWORD: ${{ secrets.OSSRH_PASSWORD }}
