--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,6 +3,7 @@ name: Build and Publish to Maven Central
 on:
   release:
     types: [released, prereleased]
+  workflow_dispatch:
 jobs:
   publish:
     name: Release build and publish
