--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,9 +10,11 @@ jobs:
     runs-on: macOS-latest
     env:
       SDK_VERSION: ${{ 
-        github.event_name == 'release'
-          && github.event.release.tag_name
-          || github.event.inputs.sdk_version
+          (
+            (github.event_name == 'release' && github.event.release.tag_name)
+            || github.event.inputs.sdk_version
+          )
+          | replace('.*?([0-9]+\.[0-9]+\.[0-9]+(-[A-Za-z0-9._]+)?)$', '$1')
         }}
       
     steps:
