--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,8 +16,7 @@ jobs:
     runs-on: macOS-latest
     env:
       RAW_VERSION: ${{ 
-        (github.event_name == 'release' && github.event.release.tag_name)
-        || github.event.inputs.sdk_version
+        SDK_VERSION=$(echo "${{ env.RAW_VERSION }}" | sed -E 's/.*([0-9]+\.[0-9]+\.[0-9]+(-[A-Za-z0-9._]+)?)$/\1/')
         }}
     steps:
       - name: Check out code
