--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,29 +1,30 @@
 [versions]
 activityCompose = "1.10.1"
-agp = "8.7.3"
-appcompat = "1.7.0"
-composeBom = "2025.03.00"
-coreKtx = "1.15.0"
-datastore = "1.1.2"
-espressoCore = "3.6.1"
-gson = "2.10.1"
+agp = "8.12.0"
+appcompat = "1.7.1"
+composeBom = "2025.07.00"
+coreKtx = "1.16.0"
+datastore = "1.1.7"
+espressoCore = "3.7.0"
+gson = "2.13.1"
 junit = "4.13.2"
-junitVersion = "1.2.1"
-kotlin = "2.1.21"
-ktor = "3.0.3"
-activityKtx = "1.10.0"
-browser = "1.8.0"
-kotlinxCoroutines = "1.10.1"
-kotlinxDatetime = "0.6.1"
-kotlinxSerializationJson = "1.7.3"
+junitVersion = "1.3.0"
+kotlin = "2.2.0"
+ktor = "3.2.3"
+activityKtx = "1.10.1"
+browser = "1.9.0"
+kotlinxCoroutines = "1.10.2"
+kotlinxDatetime = "0.7.1"
+kotlinxSerializationJson = "1.9.0"
 napier = "2.7.1"
-lifecycleLivedataKtx = "2.8.7"
-navigationUiKtx = "2.8.7"
-firebaseCrashlyticsBuildtools = "3.0.3"
-okio = "3.10.2"
-robolectric = "4.14.1"
-androidx-test = "1.6.1"
-test-runner = "1.6.2"
+lifecycleLivedataKtx = "2.9.2"
+navigationUiKtx = "2.9.3"
+firebaseCrashlyticsBuildtools = "3.0.5"
+okio = "3.16.0"
+robolectric = "4.15.1"
+androidx-test = "1.7.0"
+coroutines-test = "1.10.1"
+test-runner = "1.7.0"
 
 
 [libraries]
